[metadata]
name = hydrant
summary = firehose consumer that stores events for further retrieval
description-file = README.md
author = Matthieu Huin
author-email = softwarefactory-dev@redhat.com
home-page = http://softwarefactory-project.io
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = hydrant

[entry_points]
console_scripts =
    hydrant = hydrant.hydrant:main
